--- a/app/src/main/res/layout/activity_detailed_view.xml
+++ b/app/src/main/res/layout/activity_detailed_view.xml
@@ -77,6 +77,7 @@
             android:paddingRight="@dimen/heavy_padding"/>
 
         <TextView
+            android:id="@+id/tv_review_header"
             android:text="@string/review"
             android:textSize="@dimen/large_text"
             android:layout_width="match_parent"
@@ -88,6 +89,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tv_trailer_header"
             android:text="@string/trailer"
             android:textSize="@dimen/large_text"
             android:layout_width="match_parent"
