--- a/app/src/main/res/layout-land/activity_detailed_view.xml
+++ b/app/src/main/res/layout-land/activity_detailed_view.xml
@@ -22,13 +22,13 @@
                 android:background="@drawable/rounded_corner"
                 app:srcCompat="@mipmap/ic_launcher"
                 android:id="@+id/iv_dv_poster"
-                android:layout_weight="1"
-                android:layout_height="@dimen/iv_height"
-                android:layout_width="@dimen/iv_width"/>
+                android:layout_height="150dp"
+                android:layout_width="211dp"
+                android:adjustViewBounds="true"/>
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="@dimen/heavy_padding">
@@ -76,44 +76,67 @@
             android:paddingLeft="@dimen/heavy_padding"
             android:paddingRight="@dimen/heavy_padding"/>
 
-        <TextView
-            android:id="@+id/tv_review_header"
-            android:text="@string/review"
-            android:textSize="@dimen/large_text"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_review"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-        <ProgressBar
-            android:id="@+id/pb_progress_bar_review"
-            android:layout_height="@dimen/pb_height"
-            android:layout_width="@dimen/pb_width"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
+                <ProgressBar
+                    android:id="@+id/pb_progress_bar_review"
+                    android:layout_height="@dimen/pb_height"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:visibility="invisible"
+                    android:layout_weight="1"/>
 
-        <TextView
-            android:id="@+id/tv_trailer_header"
-            android:text="@string/trailer"
-            android:textSize="@dimen/large_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/tv_review_header"
+                    android:text="@string/review"
+                    android:textSize="@dimen/large_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_trailer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_review"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
 
-        <ProgressBar
-            android:id="@+id/pb_progress_bar_trailer"
-            android:layout_height="@dimen/pb_height"
-            android:layout_width="@dimen/pb_width"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/pb_progress_bar_trailer"
+                    android:layout_height="@dimen/pb_height"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tv_trailer_header"
+                    android:text="@string/trailer"
+                    android:textSize="@dimen/large_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_trailer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </LinearLayout>
+        </LinearLayout>
 
 
     </LinearLayout>
