--- a/app/src/main/res/layout/movies_trailers.xml
+++ b/app/src/main/res/layout/movies_trailers.xml
@@ -8,12 +8,21 @@ android:layout_height="wrap_content"
     >
 
 
-<ImageButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:srcCompat="@mipmap/ic_launcher"
-    android:id="@+id/ib_trailer_thumb"
-    android:layout_weight="1"
-    android:adjustViewBounds="true"/>
+    <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_trailer_name"
+        android:layout_weight="1"/>
+
+    <ImageButton
+        android:layout_width="@dimen/iv_width"
+        android:layout_height="@dimen/iv_height"
+        app:srcCompat="@mipmap/ic_launcher"
+        android:id="@+id/ib_trailer_thumb"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+        android:elevation="0dp"
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
