--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="large_text">42sp</dimen>
     <dimen name="medium_text">27sp</dimen>
     <dimen name="small_text">17sp</dimen>
+    <dimen name="tiny_text">9sp</dimen>
     <dimen name="light_padding">5dp</dimen>
     <dimen name="heavy_padding">20dp</dimen>
     <dimen name="iv_height">150dp</dimen>
