--- a/app/src/main/res/layout-land/activity_detailed_view.xml
+++ b/app/src/main/res/layout-land/activity_detailed_view.xml
@@ -17,21 +17,36 @@
             android:paddingLeft="@dimen/light_padding"
             android:paddingTop="@dimen/light_padding">
 
-            <ImageView
-                android:layout_gravity="start"
-                android:background="@drawable/rounded_corner"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/iv_dv_poster"
-                android:layout_height="150dp"
-                android:layout_width="211dp"
-                android:adjustViewBounds="true"/>
-
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingLeft="@dimen/heavy_padding">
+                >
+
+                <ImageView
+                    android:layout_gravity="start"
+                    android:background="@drawable/rounded_corner"
+                    app:srcCompat="@mipmap/ic_launcher"
+                    android:id="@+id/iv_dv_poster"
+                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:adjustViewBounds="true"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@android:drawable/btn_star_big_on"
+                    android:id="@+id/ib_fav_button"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:text="TextView"
@@ -82,7 +97,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
