--- a/app/src/main/res/menu/movie.xml
+++ b/app/src/main/res/menu/movie.xml
@@ -19,6 +19,10 @@
                     android:title="@string/menu_sort_rated"
                     android:checked="true"
                     />
+                <item
+                    android:id="@+id/menu_fav"
+                    android:title="@string/menu_fav"
+                    />
             </group>
         </menu>
     </item>
