--- a/app/src/main/res/layout-land/activity_detailed_view.xml
+++ b/app/src/main/res/layout-land/activity_detailed_view.xml
@@ -97,10 +97,12 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:minHeight="182dp"
+                android:elevation="1dp">
 
                 <ProgressBar
                     android:id="@+id/pb_progress_bar_review"
@@ -126,10 +128,10 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="1"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <ProgressBar
                     android:id="@+id/pb_progress_bar_trailer"
