--- a/app/src/main/res/layout/activity_detailed_view.xml
+++ b/app/src/main/res/layout/activity_detailed_view.xml
@@ -21,23 +21,32 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1">
+                >
 
                 <ImageView
                     android:layout_gravity="start"
-                    android:background="@drawable/rounded_corner"
                     app:srcCompat="@mipmap/ic_launcher"
                     android:id="@+id/iv_dv_poster"
                     android:layout_height="wrap_content"
-                    android:layout_width="134dp"
-                    android:adjustViewBounds="true"/>
+                    tools:adjustViewBounds="true"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"
+                    android:layout_width="150dp"/>
 
                 <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/btn_star_big_on"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    app:srcCompat="@mipmap/btn_star_big_on"
                     android:id="@+id/ib_fav_button"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:elevation="2dp"/>
+
+                <TextView
+                    android:text="@string/fav_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView"/>
 
             </LinearLayout>
 
@@ -45,7 +54,6 @@
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:paddingLeft="@dimen/heavy_padding">
 
                 <TextView
